--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ version '1.0-SNAPSHOT'
 buildscript {
     ext {
         kotlin_version = "1.3.+"
+        slf4j_version = "1.7.25"
         ktor_version = "1.1.3"
         junit_version = "4.12"
         unirest_version = "1.4.9"
@@ -29,6 +30,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.slf4j:slf4j-simple:$slf4j_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "io.ktor:ktor-jackson:$ktor_version"
 
