--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         kotlin_version = "1.3.+"
         slf4j_version = "1.7.25"
         ktor_version = "1.1.3"
+        kodein_version = "6.1.0"
         junit_version = "4.12"
         unirest_version = "1.4.9"
     }
@@ -33,6 +34,7 @@ dependencies {
     compile "org.slf4j:slf4j-simple:$slf4j_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "io.ktor:ktor-jackson:$ktor_version"
+    implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
 
     testCompile "junit:junit:$junit_version"
     testCompile "com.mashape.unirest:unirest-java:$unirest_version"
