--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         slf4j_version = "1.7.25"
         ktor_version = "1.1.3"
         kodein_version = "6.1.0"
+        hikaricp_version = "3.3.1"
+        h2_version = "1.4.199"
+        exposed_version = "0.13.5"
         junit_version = "4.12"
         unirest_version = "1.4.9"
     }
@@ -35,6 +38,9 @@ dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "io.ktor:ktor-jackson:$ktor_version"
     implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
+    compile "com.zaxxer:HikariCP:$hikaricp_version"
+    compile "com.h2database:h2:$h2_version"
+    compile "org.jetbrains.exposed:exposed:$exposed_version"
 
     testCompile "junit:junit:$junit_version"
     testCompile "com.mashape.unirest:unirest-java:$unirest_version"
