--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,17 @@ buildscript {
     ext {
         kotlin_version = "1.3.+"
         slf4j_version = "1.7.25"
-        ktor_version = "1.1.3"
+        ktor_version = "1.2.3"
         kodein_version = "6.1.0"
         hikaricp_version = "3.3.1"
         h2_version = "1.4.199"
-        exposed_version = "0.13.5"
+        exposed_version = "0.14.1"
         junit_version = "4.12"
         unirest_version = "1.4.9"
     }
 
     repositories {
+        mavenLocal()
         mavenCentral()
         jcenter()
     }
@@ -28,19 +29,22 @@ apply plugin: 'application'
 mainClassName = "io.realworld.app.AppKt"
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "org.slf4j:slf4j-simple:$slf4j_version"
-    compile "io.ktor:ktor-server-netty:$ktor_version"
-    compile "io.ktor:ktor-jackson:$ktor_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api "org.slf4j:slf4j-simple:$slf4j_version"
+    api "io.ktor:ktor-server-netty:$ktor_version"
+    api "io.ktor:ktor-server-cio:$ktor_version"
+    api "io.ktor:ktor-jackson:$ktor_version"
+    api "io.ktor:ktor-auth-jwt:$ktor_version"
     implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
-    compile "com.zaxxer:HikariCP:$hikaricp_version"
-    compile "com.h2database:h2:$h2_version"
-    compile "org.jetbrains.exposed:exposed:$exposed_version"
+    api "com.zaxxer:HikariCP:$hikaricp_version"
+    api "com.h2database:h2:$h2_version"
+    api "org.jetbrains.exposed:exposed:$exposed_version"
 
     testCompile "junit:junit:$junit_version"
     testCompile "com.mashape.unirest:unirest-java:$unirest_version"
